--- a/_lessons/docs.html
+++ b/_lessons/docs.html
@@ -269,6 +269,19 @@ For example:
 
 class: subtitle
 
+## Checkpoint
+
+- **Share out:** How is your organization currently documenting your analytics workflow?
+
+--
+
+- What are some elements of dbt documentation that you are excited to implement and why?
+
+---
+
+
+class: subtitle
+
 # Knowledge check
 
 You should be able to:
