Change community builder, add not about video

--- a/_lessons/distributed-norms.html
+++ b/_lessons/distributed-norms.html
@@ -174,15 +174,27 @@ class: subtitle
 
 ---
 
+# Quick Note about video
+
+* If you have to step out for a personal reason, feel free to turn off your video and step out.
+
+* When you return, please turn your video back on.  It is really helpful for building community and letting us know you are with us 😃
+
+* Note: We might check in just to make sure you are doing alright if we see your video is off for a while.
+
+---
+
+
 class: subtitle
 
 # Community Builder
 
 In your breakout room...
-- Introduce yourself again
-- Find out who has a birthday closest to today (You are the screen sharer for this activity 😀)
-- In the Google Doc - record your team name and everyone's favorite <a href="https://en.wikipedia.org/wiki/List_of_Crayola_crayon_colors">Crayola Crayon Color.</a>
-- When you see the prompt counting down the breakout rooms, let the timer run down before returning.
+1. Find out who has a birthday closest to today (You will screen share the whiteboard doc with the questions)
+2. The whiteboard has three questions.
+3. Each person chooses a question to answer and take turns sharing out.
+4. If you finish early, start brainstorming some curious questions about dbt for the Whiteboard.
+5. Note: When you see the countdown pop up in the breakout room, let the timer run out before returning.
 
 ???
 * (Send link to Google doc in the Slack Channel)
