--- a/_lessons/case-study.html
+++ b/_lessons/case-study.html
@@ -17,8 +17,8 @@ Events Manager
 ## Available data:
 ```sql
 select * from raw.ticket_tailor.orders;
-select * from raw.learn_stripe.charges;
-select * from raw.learn_stripe.refunds;
+select * from raw.ticket_tailor.events;
+select * from raw.ticket_tailor.issued_tickets;
 ```
 
 ---
@@ -55,8 +55,8 @@ Take what you've learned in this course and start working on this issue!
 
 ```sql
 select * from raw.ticket_tailor.orders;
-select * from raw.learn_stripe.charges;
-select * from raw.learn_stripe.refunds;
+select * from raw.ticket_tailor.events;
+select * from raw.ticket_tailor.issued_tickets;
 ```
 
 Time is limited — if you can't get something done in time, jot it down as a "to do" somewhere.
