Updated file names, added two presentations

--- a/_ondemand/testing-what.html
+++ b/_ondemand/testing-what.html
@@ -1,8 +1,7 @@
 ---
-layout: revealslide
-title: Jekyll&#58; Make presentation page with reveal.js
-description: A presentation slide for how to use reveal.js in Jekyll
-theme: black
+layout: reveal
+title: What is testing?
+description: A presentation slide for explaining the role of testing in dbt.
 transition: slide
 ---
 
